--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tanstack/react-query": "^4.32.6",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
